nouveaux enchant, continue de retirer des méthodes deprecated